[gd_scene load_steps=8 format=3 uid="uid://bflbgakbm3xso"]

[ext_resource type="Script" uid="uid://cxfx6din8ve6n" path="res://scenes/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://b21lwkvpf3grc" path="res://scenes/characters/player/player.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bkor4ca4lna84" path="res://scripts/audio_player.tscn" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://dja8qf47j35i2" path="res://scenes/ui/hud.tscn" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://co53g6a28cnfb" path="res://assets/audio/music/level_end.ogg" id="5_tbgi4"]
[ext_resource type="AudioStream" uid="uid://dghm170hn8rqy" path="res://assets/audio/music/birthday_music.ogg" id="6_tefeu"]
[ext_resource type="AudioStream" uid="uid://cypxn1464jkkg" path="res://assets/audio/music/lose.ogg" id="7_o6xl0"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")
level_number = 6

[node name="Map" type="Node2D" parent="."]

[node name="Player" parent="." groups=["player"] instance=ExtResource("1_o5qli")]

[node name="AudioPlayer" parent="." instance=ExtResource("3_jyhfs")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("4_jyhfs")]

[node name="LevelEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tbgi4")

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tefeu")

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o6xl0")

[node name="LevelTimer" type="Timer" parent="."]

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
